# IRS_2025_group_7

./: README.md  notes.md
Conveyor_Data/: timer.st
hand_solo_arm/: package.xml  setup.cfg  setup.py
hand_solo_arm/hand_solo_arm/: hs_pick_place.py
hand_solo_virtual_nav/: package.xml  setup.py
hand_solo_virtual_nav/config/: pa_nav2_params.yaml  pa_slam_params.yaml
hand_solo_virtual_nav/hand_solo_virtual_nav/: hs_waypoint_follower.py
hand_solo_virtual_nav/launch/: nav_launch.py
hand_solo_virtual_nav/map/: pa_warehouse_map_01.pgm  pa_warehouse_map_01.yaml  pa_warehouse_map_02.pgm  pa_warehouse_map_02.yaml
industrial-robots-and-systems-world/: .gitignore  README.md  compose-editor.yaml  compose.yaml  docker-compose.override.yml
industrial-robots-and-systems-world/.github/workflows/: omron-moma-humble.yml  openplc-editor-humble.yml  openplc-runtime-humble.yml  warehouse-humble.yml
industrial-robots-and-systems-world/omron_moma/: Dockerfile  workspace_entrypoint.sh
industrial-robots-and-systems-world/openplc-editor/: Dockerfile
industrial-robots-and-systems-world/openplc-runtime/: Dockerfile
industrial-robots-and-systems-world/warehouse/: Dockerfile
pa_warehouse_status/: package.xml  setup.py
pa_warehouse_status/pa_warehouse_status/: pineapple_gossip_bot.py  plc_hmi_listener.py
